--- a/sass/_site.scss
+++ b/sass/_site.scss
@@ -3,6 +3,7 @@
     padding: 1rem;
     padding-top: 0.125rem;
     border-bottom: 1px solid black;
+    background: #c9cacc;
     @include bp(s) {
         border-bottom: 2px solid black;
         padding: 0.75rem 1rem;
@@ -77,6 +78,7 @@
     letter-spacing: 0;
     padding: 1rem;
     padding-bottom: 0;
+    background: #c9cacc;
     @include bp(s) {
         padding-top: 0.6rem;
         background: transparent;
@@ -93,7 +95,9 @@
 
 .site__title {
     font-weight: 600;
-    font-size: var(--ms-1);
+    @include bp(s) {
+        font-size: var(--ms-1);
+    }
     a {
         text-decoration: none;
     }
